Tests reports were added

--- a/python_pytest_course/lambdatest/pom/pytest.ini
+++ b/python_pytest_course/lambdatest/pom/pytest.ini
@@ -4,4 +4,4 @@ markers =
     regression: Regression Test
     sanity
     integration:
-addopts = -v -rA
+addopts = -v -rA --html=AutomationPytestReport.html
