--- a/amazon_web/pytest.ini
+++ b/amazon_web/pytest.ini
@@ -4,4 +4,4 @@ markers =
     regression: Regression Test
     sanity
     integration:
-addopts = -rA -v --html=AutomatonPytestReport.html
+addopts = -rA -v
